test/spec_vectors/block/fail/module_51.wat
(module (func $type-value-unreached-select-i32-f32 (result i32) (block (result f32) (select (unreachable) (unreachable) (unreachable)))))